# DeltaChain

./: .gitmodules  Cargo.toml  README.md  build.sh  start.sh  test.json
consensus/: Cargo.toml
consensus/primitives/: Cargo.toml
consensus/primitives/src/: lib.rs
consensus/src/: lib.rs
docs/: README.md
node/: Cargo.toml
node/res/: galois.json
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/detachain/: Cargo.toml
runtime/galois/: Cargo.toml
runtime/src/: constants.rs  lib.rs
