[package]
authors = ['detawallet DevHub <https://github.com/detawallet>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://detawallet.net/detachain'
license = 'Unlicense'
name = 'detachain'
repository = 'https://github.com/detawallet/detaChain/'
version = '0.7.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'detachain'

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

[dependencies]
futures = "0.3.4"
log = "0.4.8"
jsonrpc-core = '15.0.0'
jsonrpc-pubsub = "15.0.0"
structopt = '0.3.8'
array-bytes = { version = "0.3.0" }

# local dependencies
detachain-runtime = { path = '../runtime', version = '0.1.0' }
galois-runtime-config = { path = '../runtime/galois', package = 'detachain-runtime-galois'}
detachain-runtime-config = { path = '../runtime/detachain', package = 'detachain-runtime-detachain'}

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-cli = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-executor = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-service = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

detachain-consensus = { path = "../consensus" }
pallet-evm = { git = "https://github.com/detawallet/frontier", branch = "master" }
pallet-ethereum = { git = "https://github.com/detawallet/frontier", branch = "master" }
fc-consensus = { git = "https://github.com/detawallet/frontier", branch = "master" }
fp-consensus = { git = "https://github.com/detawallet/frontier", branch = "master" }
fc-rpc = { git = "https://github.com/detawallet/frontier", branch = "master" }
fp-rpc = { git = "https://github.com/detawallet/frontier", branch = "master" }
fc-rpc-core = { git = "https://github.com/detawallet/frontier", branch = "master" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
fc-db = { git = "https://github.com/detawallet/frontier", branch = "master" }
fc-mapping-sync = { git = "https://github.com/detawallet/frontier", branch = "master" }

[features]
runtime-benchmarks = ['detachain-runtime/runtime-benchmarks']
