[package]
name = "detachain-consensus-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for detachain consensus"
edition = "2018"
license = "Apache-2.0"
homepage = "https://detawallet.net/detachain"
repository = "https://github.com/detawallet/detaChain/"

[dependencies]
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"codec/std",
]
