[package]
authors = ['detawallet DevHub <https://github.com/detawallet>']
description = 'detaChain is the Polkadot Smart Wallet Parachain based on Substrate'
edition = '2018'
homepage = 'https://detawallet.net/detachain'
license = 'Unlicense'
name = 'detachain-runtime-detachain'
repository = 'https://github.com/detawallet/detaChain/'
version = '0.1.0'
